# px4_controller_ws

./: csv_script.py  plotting.m  vehicle_attitude.csv  vehicle_attitude_setpoint.csv
install/: local_setup.sh  setup.sh
install/px4_msgs/include/px4_msgs/px4_msgs/msg/detail/: estimator_status_flags__struct.h  vehicle_status__struct.h  vehicle_status__struct.hpp
install/px4_msgs/local/lib/python3.10/dist-packages/px4_msgs/: _px4_msgs_s.ep.rosidl_typesupport_fastrtps_c.c
install/px4_msgs/local/lib/python3.10/dist-packages/px4_msgs/msg/: __init__.py  _vehicle_status.py
install/px4_msgs/share/ament_index/resource_index/rosidl_interfaces/: px4_msgs
install/px4_msgs/share/px4_msgs/: package.sh
install/px4_msgs/share/px4_msgs/cmake/: rosidl_cmake-extras.cmake
install/px4_msgs/share/px4_msgs/msg/: VehicleStatus.idl
install/px4_offboard/lib/px4_offboard/: offboard_node
install/px4_offboard/share/px4_offboard/: package.sh
log/: latest_build
src/: reader.m
src/matlab_msg_gen/glnxa64/log/: latest_build
src/matlab_msg_gen/glnxa64/src/px4_msgs/: CMakeLists.txt  Md5checksum.mat  packageInfo.mat
src/matlab_msg_gen/glnxa64/src/px4_msgs/include/px4_msgs/: visibility_control.h
src/matlab_msg_gen/glnxa64/src/px4_msgs/m/+ros/+internal/+ros2/+custommessages/+px4_msgs/: actionRequest.m  actuatorArmed.m  actuatorControlsStatus.m  actuatorMotors.m  actuatorOutputs.m  actuatorServos.m  actuatorServosTrim.m  actuatorTest.m  adcReport.m  airspeed.m  airspeedValidated.m  airspeedWind.m  armingCheckReply.m  armingCheckRequest.m  autotuneAttitudeControlStatus.m  batteryStatus.m  buffer128.m  buttonEvent.m  cameraCapture.m  cameraStatus.m  cameraTrigger.m  canInterfaceStatus.m  cellularStatus.m  collisionConstraints.m  configOverrides.m  controlAllocatorStatus.m  cpuload.m  datamanRequest.m  datamanResponse.m  debugArray.m  debugKeyValue.m  debugValue.m  debugVect.m  differentialPressure.m  distanceSensor.m  distanceSensorModeChangeRequest.m  ekf2Timestamps.m  escReport.m  escStatus.m  estimatorAidSource1d.m  (+187 more)
src/matlab_msg_gen/glnxa64/src/px4_msgs/src/: px4_msgs_ActionRequest_message.cpp  px4_msgs_ActuatorArmed_message.cpp  px4_msgs_ActuatorControlsStatus_message.cpp  px4_msgs_ActuatorMotors_message.cpp  px4_msgs_ActuatorOutputs_message.cpp  px4_msgs_ActuatorServosTrim_message.cpp  px4_msgs_ActuatorServos_message.cpp  px4_msgs_ActuatorTest_message.cpp  px4_msgs_AdcReport_message.cpp  px4_msgs_AirspeedValidated_message.cpp  px4_msgs_AirspeedWind_message.cpp  px4_msgs_Airspeed_message.cpp  px4_msgs_ArmingCheckReply_message.cpp  px4_msgs_ArmingCheckRequest_message.cpp  px4_msgs_AutotuneAttitudeControlStatus_message.cpp  px4_msgs_BatteryStatus_message.cpp  px4_msgs_Buffer128_message.cpp  px4_msgs_ButtonEvent_message.cpp  px4_msgs_CameraCapture_message.cpp  px4_msgs_CameraStatus_message.cpp  px4_msgs_CameraTrigger_message.cpp  px4_msgs_CanInterfaceStatus_message.cpp  px4_msgs_CellularStatus_message.cpp  px4_msgs_CollisionConstraints_message.cpp  px4_msgs_ConfigOverrides_message.cpp  px4_msgs_ControlAllocatorStatus_message.cpp  px4_msgs_Cpuload_message.cpp  px4_msgs_DatamanRequest_message.cpp  px4_msgs_DatamanResponse_message.cpp  px4_msgs_DebugArray_message.cpp  px4_msgs_DebugKeyValue_message.cpp  px4_msgs_DebugValue_message.cpp  px4_msgs_DebugVect_message.cpp  px4_msgs_DifferentialPressure_message.cpp  px4_msgs_DistanceSensorModeChangeRequest_message.cpp  px4_msgs_DistanceSensor_message.cpp  px4_msgs_Ekf2Timestamps_message.cpp  px4_msgs_EscReport_message.cpp  px4_msgs_EscStatus_message.cpp  px4_msgs_EstimatorAidSource1d_message.cpp  (+187 more)
src/px4_offboard/: package.xml  setup.py
src/px4_offboard/px4_offboard/: arming.py  offboard_node.py
